Second commit forms
For the second commit I added forms for adding a new project and tracking time. Both views display, but only the project one saves. Not sure why. Also moved Urls from project level to application level.

--- a/taskmanager/task/templates/task/index.html
+++ b/taskmanager/task/templates/task/index.html
@@ -5,4 +5,6 @@
 {% for ProjectDef in project_list %}
 <li class="list-group-item"><a href="{% url 'detail' id=ProjectDef.id %}">{{ProjectDef.projectname}}<a></li>
 {% endfor %}
+</ul>
+<p><a href="{% url 'newproject' %}">new Project</a></p>
 {% endblock %}
