--- a/taskmanager/task/templates/base.html
+++ b/taskmanager/task/templates/base.html
@@ -1,8 +1,12 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <title>Project Task Manager</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        
 
     </head>
     <body>
@@ -10,13 +14,17 @@
             <h1>Project Task Manager</h1>
         </div>
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-brand" href="{% url 'index' %}">Project Manager</div>
-            </div>
-            <ul class="nav navbar-nav">
-                
-            </ul>
-        </nav>
+                <div class="container-fluid">
+                <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'index' %}">Task Manager</a>
+                </div>
+                <ul class="nav navbar-nav">
+               
+                <li><a href="{% url 'newproject' %}">new Project</a></li>
+                <li><a href="{% url 'worktimes' %}">Work Log</a></li>
+                </ul>
+                </div>
+                </nav>
         <p>&nbsp;</p>
         <div class="container-fluid">
         {% block content %}
