Fourth commit: work log and calculated field
I have added another view method for showing all the work logs and also called the method in WorkLog. Also changed the URL to add the new view, the base.html and a new template.

--- a/taskmanager/task/templates/base.html
+++ b/taskmanager/task/templates/base.html
@@ -22,6 +22,7 @@
                
                 <li><a href="{% url 'newproject' %}">new Project</a></li>
                 <li><a href="{% url 'worktimes' %}">Work Log</a></li>
+                <li><a href="{% url 'logs' %}">Logs</a></li>
                 </ul>
                 </div>
                 </nav>
