Commit Five Added Authentication
For this commit I added Login and logout features and made the new project and worklog forms accessible only for those who are logged in.

--- a/taskmanager/task/templates/base.html
+++ b/taskmanager/task/templates/base.html
@@ -23,6 +23,8 @@
                 <li><a href="{% url 'newproject' %}">new Project</a></li>
                 <li><a href="{% url 'worktimes' %}">Work Log</a></li>
                 <li><a href="{% url 'logs' %}">Logs</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
                 </div>
                 </nav>
